--- a/app/src/main/res/layout/fragment_superheroes.xml
+++ b/app/src/main/res/layout/fragment_superheroes.xml
@@ -6,37 +6,52 @@
                                              android:layout_height="wrap_content"
                                              android:id="@+id/linearLayout" android:minWidth="400dp">
 
-    <TextView
-            android:id="@+id/name"
-            android:layout_width="159dp"
-            android:layout_height="37dp"
-            android:textAppearance="?attr/textAppearanceListItem"
+    <android.support.v7.widget.CardView
+            android:layout_width="393dp"
+            android:layout_height="wrap_content" android:layout_marginTop="8dp"
             app:layout_constraintTop_toTopOf="parent"
-            android:layout_marginTop="26dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="16dp"
-            android:layout_marginBottom="11dp" app:layout_constraintBottom_toTopOf="@+id/gender"
-            app:layout_constraintStart_toEndOf="@+id/imageView2" android:layout_marginStart="36dp"/>
-    <TextView
-            android:layout_width="67dp"
-            android:layout_height="35dp"
-            android:id="@+id/gender"
-            android:layout_marginStart="37dp"
-            app:layout_constraintStart_toEndOf="@+id/power" android:layout_marginTop="11dp"
-            app:layout_constraintTop_toBottomOf="@+id/name" app:layout_constraintEnd_toEndOf="parent"
-            android:layout_marginEnd="50dp" app:layout_constraintBottom_toBottomOf="parent"/>
-    <TextView
-            android:layout_width="72dp"
-            android:layout_height="32dp"
-            android:id="@+id/power"
-            android:layout_marginTop="14dp"
-            app:layout_constraintTop_toBottomOf="@+id/name" app:layout_constraintEnd_toStartOf="@+id/gender"
-            android:layout_marginEnd="37dp" app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintStart_toEndOf="@+id/imageView2" android:layout_marginStart="70dp"/>
-    <ImageView
-            android:layout_width="111dp"
-            android:layout_height="99dp" app:srcCompat="@mipmap/ic_launcher"
-            android:id="@+id/imageView2"
-            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toStartOf="@+id/name"
-            android:layout_marginEnd="36dp" app:layout_constraintStart_toStartOf="parent"
-            android:layout_marginStart="16dp" android:layout_marginTop="10dp"
-            app:layout_constraintTop_toTopOf="parent"/>
+            android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
+            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp">
+        <android.support.constraint.ConstraintLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent">
+
+            <TextView
+                    android:id="@+id/name"
+                    android:layout_width="214dp"
+                    android:layout_height="37dp"
+                    android:textAppearance="?attr/textAppearanceListItem"
+                    app:layout_constraintTop_toTopOf="parent"
+                    android:layout_marginTop="26dp" app:layout_constraintEnd_toEndOf="parent"
+                    android:layout_marginEnd="16dp"
+                    app:layout_constraintStart_toEndOf="@+id/imageView" android:layout_marginStart="8dp"/>
+            <TextView
+                    android:layout_width="76dp"
+                    android:layout_height="24dp"
+                    android:id="@+id/gender"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    android:layout_marginEnd="56dp" app:layout_constraintBottom_toBottomOf="parent"
+                    android:text="gender"
+                    android:layout_marginBottom="8dp" android:layout_marginTop="8dp"
+                    app:layout_constraintTop_toBottomOf="@+id/name" app:layout_constraintVertical_bias="1.0"/>
+            <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="32dp"
+                    android:id="@+id/power"
+                    android:layout_marginTop="14dp"
+                    app:layout_constraintTop_toBottomOf="@+id/name"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintStart_toEndOf="@+id/imageView" android:layout_marginStart="52dp"
+                    android:text="power" app:layout_constraintVertical_bias="0.0"/>
+            <ImageView
+                    android:layout_width="111dp"
+                    android:layout_height="99dp" app:srcCompat="@mipmap/ic_launcher"
+                    android:id="@+id/imageView"
+                    app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toStartOf="@+id/name"
+                    android:layout_marginEnd="36dp" app:layout_constraintStart_toStartOf="parent"
+                    android:layout_marginStart="16dp" android:layout_marginTop="10dp"
+                    app:layout_constraintTop_toTopOf="parent"/>
+        </android.support.constraint.ConstraintLayout>
+    </android.support.v7.widget.CardView>
 </android.support.constraint.ConstraintLayout>
