--- a/app/src/main/res/layout/fragment_item_list_dialog.xml
+++ b/app/src/main/res/layout/fragment_item_list_dialog.xml
@@ -3,8 +3,8 @@
                                              xmlns:app="http://schemas.android.com/apk/res-auto"
                                              xmlns:tools="http://schemas.android.com/tools"
                                              android:id="@+id/constrain"
-                                             android:layout_width="match_parent"
-                                             android:layout_height="match_parent"
+                                             android:layout_width="wrap_content"
+                                             android:layout_height="wrap_content"
                                              android:clipToPadding="false"
                                              android:paddingBottom="@dimen/list_item_spacing_half"
                                              android:paddingTop="@dimen/list_item_spacing_half"
